# AOATsetlinMachine

./: CMakeLists.txt  LICENSE  README.md
demo/: rsaDemo.cpp  siRNAdemo.cpp  testRSA.cpp
src/AOA/: AOA.cpp  CMakeLists.txt
src/RSA/: CMakeLists.txt  Habitat.h  Predator.h  RSA.h
src/tsetlin/: CMakeLists.txt  TsetlinMachine.cpp  TsetlinMachine.h  io.cpp  io.h
